# deployment

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: auth.rs  deployments.rs  logs.rs  mod.rs  railway.rs
src-tauri/src/railway/: client.rs  types.rs
src-tauri/src/vercel/: client.rs  mod.rs  types.rs
src/components/: AuthView.tsx  DeploymentList.tsx  DeploymentsList.css  DeploymentsList.tsx  Header.tsx  LogViewer.tsx  ProjectSelector.tsx  Settings.tsx  StatusBadge.tsx
src/hooks/: useAuth.ts  useDeployments.ts  useLogs.ts
src/store/: index.ts
src/types/: index.ts
