[package]
name = "deployment"
version = "0.1.0"
description = "A minimal deployment tracker for your cloud platforms"
authors = ["you"]
edition = "2021"

[lib]
name = "deployment_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
keyring = { version = "3", features = ["apple-native"] }
futures = "0.3"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
window-vibrancy = "0.5"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
md5 = "0.7"
